--- a/_posts/2020-10-30-NCYU-課堂練習03.md
+++ b/_posts/2020-10-30-NCYU-課堂練習03.md
@@ -4,3 +4,27 @@ date: 2020-10-30 14:47
 categories: [jekyll]
 tags: [C++]
 ---
+```c++
+#include<iostream>
+#include<iomanip>
+using namespace std;
+int main()
+{
+    double a,b;
+    cin>>a>>b;
+    double result = a/b;    //1.623 -> 1.63
+    cout<<setprecision(2)<<fixed<<result+0.004;
+}
+```
+
+```c++
+#include<iostream>
+using namespace std;
+int main()
+{
+    int a,b,c,d;
+    cin>>a>>b>>c>>d;
+    cout<<(c-a)*(d-b)<<endl;
+    cout<<(c-a+d-b)*2;
+}
+```
