--- a/_posts/2020-10-30-NCYU-課堂練習05.md
+++ b/_posts/2020-10-30-NCYU-課堂練習05.md
@@ -4,3 +4,162 @@ date: 2020-10-30 14:49
 categories: [jekyll]
 tags: [C++]
 ---
+```c++
+#include<iostream>
+using namespace std;
+int main()
+{
+    int y;
+    cin>>y;
+    if( ( y%4==0 && y%100!=0 ) || y%400==0 )
+        cout<<"YES";
+    else
+        cout<<"NO";
+}
+```
+```c++
+#include <iostream>
+using namespace std;
+int main()
+{
+    int x,y;
+    cin>>x>>y;
+
+    if ( x!=0 && y!=0 ){
+        if ( x>0 ){
+            if ( y>0 )
+                cout<<"第一象限";
+            else
+                cout<<"第四象限";
+        }
+        else{
+            if ( y>0 )
+                cout<<"第二象限";
+            else
+                cout<<"第三象限";
+        }
+    }
+    else{
+        if ( x==0 && y==0 )
+            cout<<"原點";
+        else if ( x==0 )
+            cout<<"Y軸";
+        else
+            cout<<"X軸";
+    }
+}
+```
+```c++
+#include <iostream>
+using namespace std;
+
+int main()
+{
+    int year;
+    cin>>year;
+
+    int x = year%10, y = year%12;
+
+    switch(x){
+        case 4:
+            cout<<"甲";
+            break;
+        case 5:
+            cout<<"乙";
+            break;
+        case 6:
+            cout<<"丙";
+            break;
+        case 7:
+            cout<<"丁";
+            break;
+        case 8:
+            cout<<"戊";
+            break;
+        case 9:
+            cout<<"己";
+            break;
+        case 0:
+            cout<<"庚";
+            break;
+        case 1:
+            cout<<"辛";
+            break;
+        case 2:
+            cout<<"壬";
+            break;
+        case 3:
+            cout<<"癸";
+            break;
+    }
+    switch(y){
+        case 4:
+            cout<<"子";
+            break;
+        case 5:
+            cout<<"丑";
+            break;
+        case 6:
+            cout<<"寅";
+            break;
+        case 7:
+            cout<<"卯";
+            break;
+        case 8:
+            cout<<"辰";
+            break;
+        case 9:
+            cout<<"巳";
+            break;
+        case 10:
+            cout<<"午";
+            break;
+        case 11:
+            cout<<"未";
+            break;
+        case 0:
+            cout<<"申";
+            break;
+        case 1:
+            cout<<"酉";
+            break;
+        case 2:
+            cout<<"戌";
+            break;
+        case 3:
+            cout<<"亥";
+            break;
+    }
+}
+```
+```c++
+#include <iostream>
+using namespace std;
+int main()
+{
+    char word;
+    cin>>word;
+
+    // a 97 z 122 A 65 Z 90
+    if ( 97<=word && word<=122 )
+        cout<<"Character "<<word<<" is a lowercase letter.";
+    else
+        cout<<"Character "<<word<<" is a uppercase letter.";
+}
+```
+```c++
+#include <iostream>
+using namespace std;
+int main()
+{
+    string word;
+    getline(cin,word);
+
+    // a 97 z 122 A 65 Z 90
+    for(unsigned int i=0;i<word.size();i++){
+        if ( 97<=word.at(i) && word.at(i)<=122 )
+            word.at(i) -= 32;
+    }
+    cout<<word;
+}
+```
