--- a/_posts/2020-10-30-NCYU-課堂練習02.md
+++ b/_posts/2020-10-30-NCYU-課堂練習02.md
@@ -4,6 +4,29 @@ date: 2020-10-30 14:46
 categories: [jekyll]
 tags: [C++]
 ---
+
+---
+**請不要直接抄寫程式碼！** <br>
+**也請不要直接跳到程式碼部分，除非你已經寫好了，想要參考別人的寫法！**
+
+### 第一題
+
+* `<iostream>` 是 C++ 負責管 `cin` 、 `cout` 的函式庫，
+如果在前面加上 `#include` 代表引入後方的函式庫。<br>
+```c++
+#include <iostream>
+```
+* 使用命名空間，否則每次打 `cin` 、 `cout` 都要在前面加上 `std::` ，像是：
+```c++
+std::cout<<"Hello, world!"<<endl;
+```
+```c++
+using namespace std;
+```
+* `int` 為整數宣告，每宣告一次就像電腦索取 4 bytes ，能夠存放 -2<sup>31</sup>-1 ~ 2<sup>31</sup> 範圍的整數。
+* `int` 後面接著`變數名`，命名需符合規則（命名盡量要有意義），變數可以一開始給予數值，也可以之後再指派。
+
+* 題目要輸入三個整數，並輸出它們相乘的結果。程式碼大概如下：
 ```c++
 #include <iostream>
 using namespace std;
@@ -15,6 +38,20 @@ int main()
 }
 ```
 
+### 第二題
+
+* `%` 是取餘數的意思。
+* `/` 是整數除法的意思。
+* `10 / 3 = 3 ... 1` 意即 `10 / 3` 會等於 `3`，`10 % 3` 會等於 `1` <br>
+
+如何判斷一個數是偶數奇數呢？我們可以將它除以二！
+* `11 / 2 = 5 ... 1`<br>
+
+如果一個數能被二整除，它會是？否則是？
+* `11 % 2 = ?` <br>
+
+我們已經知道如何在程式裡判斷偶數奇數，現在要翻轉結果！
+* 程式碼大概如下（題目可能是負數）：
 ```c++
 #include <iostream>
 using namespace std;
@@ -26,6 +63,17 @@ int main()
 }
 ```
 
+### 第三題
+
+* 現在知道 `%` 的用法了，那怎麽活用它呢？<br>
+
+`1234 / 10 = 123 ... 4` & `1234 % 10` 看出來了嗎？
+
+* 某個數被 `10` 除之後的餘數會是這個數的最...？<br>
+
+`123 / 10 = 12 ... 3` & `123 % 10` 聰明如你！
+
+* 程式碼大概如下：
 ```c++
 #include <iostream>
 using namespace std;
@@ -45,3 +93,6 @@ int main()
     cout<<sum;
 }
 ```
+
+---
+**如果有任何問題，歡迎私訊跟我討論喔！**
