--- a/_posts/2020-10-30-NCYU-課堂練習04.md
+++ b/_posts/2020-10-30-NCYU-課堂練習04.md
@@ -4,3 +4,50 @@ date: 2020-10-30 14:48
 categories: [jekyll]
 tags: [C++]
 ---
+```c++
+#include <iostream>
+using namespace std;
+int main()
+{
+    string word;
+    cin.ignore(100,'=');
+    cin>>word;
+    cout<<word<<", length="<<word.size();
+}
+```
+```c++
+#include <iostream>
+#include <cmath>
+#include <iomanip>
+
+#define Pi 3.14159
+using namespace std;
+int main()
+{
+    float a,b,c;
+    cin>>a>>b>>c;
+    cout<<setprecision(3)<<fixed<<a*b*sin(c*Pi/180.0)/2.0;
+}
+```
+```c++
+#include <iostream>
+using namespace std;
+int main()
+{
+    int score;
+    cin>>score;
+    if(score>=100)
+        cout<<"High";
+    else
+        cout<<"Low";
+    cout<<endl;
+
+    int tem,pre;
+    cin>>tem>>pre;
+    if( tem>=40 || pre>=200 )
+        cout<<"Warning";
+    else
+        cout<<"OK";
+    cout<<endl;
+}
+```
