--- a/_posts/2020-10-30-NCYU-課堂練習06.md
+++ b/_posts/2020-10-30-NCYU-課堂練習06.md
@@ -4,3 +4,55 @@ date: 2020-10-30 14:50
 categories: [jekyll]
 tags: [C++]
 ---
+```c++
+#include <iostream>
+using namespace std;
+int main()
+{
+    int number;
+    while(cin>>number){
+        cout<<"1";
+        for (int i=2;i<number;i++)
+            if (number%i==0)
+                cout<<" "<<i;
+        cout<<endl;
+    }
+}
+```
+```c++
+#include <iostream>
+using namespace std;
+int main()
+{
+    int t;
+    cin>>t;
+    while(t>0){
+        int n,m;
+        cin>>n>>m;
+        int result = 1;
+        for(int i=1;i<=n;i++){
+            result *= i%m;
+            result %= m;
+        }
+        cout<<result%m<<endl;
+        t--;
+    }
+}
+```
+```c++
+#include <iostream>
+using namespace std;
+int main()
+{
+    int n;
+    cin>>n;
+    for(int row=1;row<=n;row++){
+        int number = row*2;
+        cout<<number;
+        for(int col=2;col<=row;col++){
+            cout<<" "<<number + (col-1)*2;
+        }
+        cout<<endl;
+    }
+}
+```
