--- a/_posts/2020-10-30-NCYU-課堂練習03.md
+++ b/_posts/2020-10-30-NCYU-課堂練習03.md
@@ -4,6 +4,15 @@ date: 2020-10-30 14:47
 categories: [jekyll]
 tags: [C++]
 ---
+
+---
+**請不要直接抄寫程式碼！** <br>
+**也請不要直接跳到程式碼部分，除非你已經寫好了，想要參考別人的寫法！**
+
+### 第一題
+
+* `iomanip` 是 C++ 管理 `格式化輸出` 的函式庫
+
 ```c++
 #include<iostream>
 #include<iomanip>
@@ -17,6 +26,7 @@ int main()
 }
 ```
 
+### 第二題
 ```c++
 #include<iostream>
 using namespace std;
@@ -28,3 +38,6 @@ int main()
     cout<<(c-a+d-b)*2;
 }
 ```
+
+---
+**如果有任何問題，歡迎私訊跟我討論喔！**
