--- a/_posts/2020-10-30-NCYU-課堂練習05.md
+++ b/_posts/2020-10-30-NCYU-課堂練習05.md
@@ -4,6 +4,12 @@ date: 2020-10-30 14:49
 categories: [jekyll]
 tags: [C++]
 ---
+
+---
+**請不要直接抄寫程式碼！** <br>
+**也請不要直接跳到程式碼部分，除非你已經寫好了，想要參考別人的寫法！**
+
+
 ```c++
 #include<iostream>
 using namespace std;
