--- a/_posts/2020-10-30-NCYU-Etutor10.md
+++ b/_posts/2020-10-30-NCYU-Etutor10.md
@@ -4,6 +4,12 @@ date: 2020-10-30 22:19
 categories: [jekyll]
 tags: [C++]
 ---
+
+---
+**請不要直接抄寫程式碼！** <br>
+**也請不要直接跳到程式碼部分，除非你已經寫好了，想要參考別人的寫法！**
+
+
 ```c++
 #include <iostream>  
 using namespace std;  
@@ -27,3 +33,6 @@ int main()
     }  
 }
 ```
+
+---
+**如果有任何問題，歡迎私訊跟我討論喔！**
