--- a/_posts/2020-10-30-NCYU-課堂練習03.md
+++ b/_posts/2020-10-30-NCYU-課堂練習03.md
@@ -11,8 +11,13 @@ tags: [C++]
 
 ### 第一題
 
-* `iomanip` 是 C++ 管理 `格式化輸出` 的函式庫
+* `iomanip` 是 C++ 管理 `格式化輸出` 的函式庫。<br>
 
+[iomanip 官方文件](http://www.cplusplus.com/reference/iomanip/?kw=iomanip)
+
+* `double` 與 `float` 為浮點數宣告，可以儲存小數。
+* 除數與被除數只要一者形態為浮點數，商就會是浮點數。
+* 因為第二位無條件進位，加多少就會進位呢？
 ```c++
 #include<iostream>
 #include<iomanip>
@@ -27,6 +32,8 @@ int main()
 ```
 
 ### 第二題
+
+* 簡單的四則運算，不會忘記週長跟面積的算法吧！
 ```c++
 #include<iostream>
 using namespace std;
