--- a/_posts/2020-10-30-NCYU-課堂練習04.md
+++ b/_posts/2020-10-30-NCYU-課堂練習04.md
@@ -9,7 +9,10 @@ tags: [C++]
 **請不要直接抄寫程式碼！** <br>
 **也請不要直接跳到程式碼部分，除非你已經寫好了，想要參考別人的寫法！**
 
+### 第一題
 
+* `cin.ignore(長度,想跳過的字元)` 用來忽略特定字元
+* `string` 有兩個函式 `size()` 跟 `length()` 都是回傳字串長度
 ```c++
 #include <iostream>
 using namespace std;
@@ -21,11 +24,14 @@ int main()
     cout<<word<<", length="<<word.size();
 }
 ```
+
+### 第二題
+* 三角函數的函式是屬於 `<cmath>` 函式庫
+* `#define` 可把想替換的字換成另一個字，`Pi` 也可以用 `float` 、 `double` 存
 ```c++
 #include <iostream>
 #include <cmath>
 #include <iomanip>
-
 #define Pi 3.14159
 using namespace std;
 int main()
@@ -35,6 +41,11 @@ int main()
     cout<<setprecision(3)<<fixed<<a*b*sin(c*Pi/180.0)/2.0;
 }
 ```
+
+### 第三題
+
+* 先判斷分數（注意題目是大於等於），再判斷溫度及氣壓
+* 邏輯運算子 `||` 是 `or` 、 `&&` 是 `and`
 ```c++
 #include <iostream>
 using namespace std;
