--- a/_posts/2020-10-30-NCYU-課堂練習05.md
+++ b/_posts/2020-10-30-NCYU-課堂練習05.md
@@ -9,7 +9,9 @@ tags: [C++]
 **請不要直接抄寫程式碼！** <br>
 **也請不要直接跳到程式碼部分，除非你已經寫好了，想要參考別人的寫法！**
 
+### 第一題
 
+* 邏輯判斷！按照題目敘述邏輯
 ```c++
 #include<iostream>
 using namespace std;
@@ -23,6 +25,11 @@ int main()
         cout<<"NO";
 }
 ```
+
+### 第二題
+
+* 輸出會有七種可能，慢慢討論
+* 可以分成四種象限與其他部分
 ```c++
 #include <iostream>
 using namespace std;
@@ -55,10 +62,15 @@ int main()
     }
 }
 ```
+
+### 第三題
+
+* 可利用題目的年分來當作起使判斷（2019為己亥，以此類推）
+* 也可用定義解（上網查）
+* 天干地支分開判斷，case 數會比較少
 ```c++
 #include <iostream>
 using namespace std;
-
 int main()
 {
     int year;
@@ -138,6 +150,10 @@ int main()
     }
 }
 ```
+### 第四題
+
+* 每個 `char` （字元）都會有一個值，稱為 `ASCII`
+* 利用 `ASCII` 來確認該字是否在 `小寫區間`
 ```c++
 #include <iostream>
 using namespace std;
@@ -153,6 +169,13 @@ int main()
         cout<<"Character "<<word<<" is a uppercase letter.";
 }
 ```
+
+### 第五題
+
+* `getline` 為讀一整行的字（讀到'\n'就停止，也就是 enter），包含空格也會讀入
+* `string` 可以像 `array` 一樣索引，索引值從 `0` 開始
+* 字串裡每一個字都是字元，字元合在一起就是字串
+* 如果每一個字元都在 `小寫區間` 裡，就把它的值變為 `大寫區間`
 ```c++
 #include <iostream>
 using namespace std;
