--- a/_posts/2020-10-30-NCYU-Etutor11.md
+++ b/_posts/2020-10-30-NCYU-Etutor11.md
@@ -9,7 +9,20 @@ tags: [C++]
 **請不要直接抄寫程式碼！** <br>
 **也請不要直接跳到程式碼部分，除非你已經寫好了，想要參考別人的寫法！**
 
+### 回家功課11
 
+* `while` 是迴圈的一種，只要條件成立（ture），就繼續執行
+* 因為 `1` 在程式裡可以代表 `true` ，所以 `while(1)` or `while(true)` 就會是無窮迴圈，通常搭配 `break` 來跳脫迴圈
+* 用一變數來記錄次數，若變數不初始化就做對自己運算則會錯誤：
+```c++
+int number;
+number++; // number = number +1;
+cout<<number;
+// 輸出結果會是亂數，因為電腦不知道 number 是多少
+```
+* 判斷奇偶數之前教過囉，可以參考 [課堂練習02](../NCYU-課堂練習02/)
+
+程式碼大概如下：
 ```c++
 #include <iostream>  
 using namespace std;  
