--- a/_posts/2020-10-30-NCYU-Etutor09.md
+++ b/_posts/2020-10-30-NCYU-Etutor09.md
@@ -9,7 +9,16 @@ tags: [C++]
 **請不要直接抄寫程式碼！** <br>
 **也請不要直接跳到程式碼部分，除非你已經寫好了，想要參考別人的寫法！**
 
+### 回家功課09
 
+* 先觀察圖形：
+  * 輸入 `3` 就會有 `3` 行 `3` 列、輸入 `5` 就會有 `5` 行 `5` 列，所以輸入 `n` 就會有 `n` 行 `n` 列
+  * 第一列的 `o` 在最中間、第列行的 `o` 在中間及左右兩邊，並且最中間那列全為 `o` （最中間怎麽用 `n` 表示呢？）
+  * 不是 `o` 的地方就是 `x`
+  * 要注意是小寫 `xo` ！！！！
+  * `o` 的變化很像 `擴散` ，每多一行 `o` 就往兩邊擴散一個，經過中間那列之後，就開始 `縮減`
+
+程式碼大概如下：
 ```c++
 #include <iostream>  
 using namespace std;  
