--- a/_posts/2020-10-30-NCYU-Etutor09.md
+++ b/_posts/2020-10-30-NCYU-Etutor09.md
@@ -45,5 +45,23 @@ int main()
 }
 ```
 
+```python
+1 2 3 4 5 6 7
+1 2 3 4 5 6 7
+1 2 3 4 5 6 7
+1 2 3 4 5 6 7
+1 2 3 4 5 6 7
+1 2 3 4 5 6 7
+1 2 3 4 5 6 7
+
+x x x o x x x
+x x o o o x x
+x o o o o o x
+o o o o o o o
+x o o o o o x
+x x o o o x x
+x x x o x x x
+```
+
 ---
 **如果有任何問題，歡迎私訊跟我討論喔！**
